@@ -1384,6 +1384,8 @@ Examples of this command:
 The `export` command will allow you to export documents from a collection in either JSON or Javabin format.
 All documents can be exported, or only those that match a query.
 
+NOTE: This hasn't been tested with nested child documents and your results will vary.
+
 NOTE: The `export` command only works with in a Solr running in cloud mode.
 
 `bin/solr export [options]`
@@ -1392,7 +1394,7 @@ NOTE: The `export` command only works with in a Solr running in cloud mode.
 
 The `bin/solr export` command takes the following parameters:
 
-`url`::
+`-url`::
 +
 [%autowidth,frame=none]
 |===
@@ -1403,7 +1405,7 @@ Fully-qualified address to a collection.
 +
 *Example*: `-url http://localhost:8983/solr/techproducts`
 
-`format`::
+`-format`::
 +
 [%autowidth,frame=none]
 |===
@@ -1411,7 +1413,7 @@ Fully-qualified address to a collection.
 |===
 +
 The file format of the export, `jsonl` or `javabin`.
-Choosing `javabin` exports to a file with extension `.javabin` which is the native Solr format.
+Choosing `javabin` exports in the native Solr format.
 This is compact and faster to import.
 
 `-out`::
@@ -1421,12 +1423,20 @@ This is compact and faster to import.
 |Optional |Default: _see description_
 |===
 +
-The file name of the export.
-If the file name ends with `json.gz` the output will be compressed into a .gz file.
+Either the path to a directory for the export to happen in, or a specific file name to populate.
 +
-If not provided, a file will be created with the name of the collection, as in `<collection>.json`.
+If not provided, a file will be created with the name of the collection, as in `<collection>.jsonl`.
 
-`query`::
+`-compress`::
++
+[%autowidth,frame=none]
+|===
+|Optional |Default: false
+|===
++
+If you specify `-compress` then the resulting outputting file with will be gzipped, for example `<collection>.jsonl.gz`.
+
+`-query`::
 +
 [%autowidth,frame=none]
 |===
@@ -1436,7 +1446,7 @@ If not provided, a file will be created with the name of the collection, as in `
 A custom query.
 The default is `\*:*` which will export all documents.
 
-`fields`::
+`-fields`::
 +
 [%autowidth,frame=none]
 |===
@@ -1446,7 +1456,7 @@ The default is `\*:*` which will export all documents.
 A comma separated list of fields to be exported.
 If not provided, all fields will be included.
 
-`limit`::
+`-limit`::
 +
 [%autowidth,frame=none]
 |===
@@ -1463,11 +1473,11 @@ Export all documents from a collection `gettingstarted`:
 [source,bash]
 bin/solr export -url http://localhost:8983/solr/gettingstarted limit -1
 
-Export all documents of collection `gettingstarted` into a file called `1MDocs.json.gz` as a zipped JSON file:
+Export all documents of collection `gettingstarted` into a file called `1MDocs.json.gz` as a compressed JSONL file:
 
 [source,bash]
 ----
-bin/solr export -url http://localhost:8983/solr/gettingstarted -1 -out 1MDocs.json.gz
+bin/solr export -url http://localhost:8983/solr/gettingstarted -1 -format jsonl -compress -out 1MDocs
 ----
 
 === Importing Documents into a Collection
@@ -1486,24 +1496,22 @@ Once you have exported documents in a file, you can use the xref:indexing-guide:
 
 The `api` command will allow you to send an arbitrary HTTP request to a Solr API endpoint.
 
-`bin/solr api -get `
+`bin/solr api -get http://localhost:8983/solr/COLL_NAME/sql?stmt=select+id+from+COLL_NAME+limit+10`
 
-http://localhost:8983/solr/COLL_NAME/sql?stmt=select+id+from+COLL_NAME+limit+10
+`bin/solr api -help`
 
-`bin/solr export -help`
+The `bin/solr api` command takes the following parameters:
 
-The `bin/solr export` command takes the following parameters:
-
-`get`::
+`-get`::
 +
 [%autowidth,frame=none]
 |===
-s|Required |Default: none
+|Required |Default: none
 |===
 +
 Fully-qualified address to a collection.
 +
-*Example*: `-get http://localhost:8983/solr/COLL_NAME/sql?stmt=select+id+from+COLL_NAME+limit+10`
+*Example*: `bin/solr api -get http://localhost:8983/solr/COLL_NAME/sql?stmt=select+id+from+COLL_NAME+limit+10`
 
 === API
 
@@ -1514,9 +1522,9 @@ If you have configured basicAuth or TLS with your Solr you may find this easier 
 $ bin/solr api api -get http://localhost:8983/solr/techproducts/select?q=*:*
 
 
-Here is an example of sending a SQL query to the techproducts /sql end point (assumes you start Solr in Cloud mode with the SQL module enabled):
+Here is an example of sending a SQL query to the techproducts /sql end point (assumes you started Solr in Cloud mode with the SQL module enabled):
 
 [source,bash]
 $ bin/solr api api -get http://localhost:8983/solr/techproducts/sql?stmt=select+id+from+techproducts+limit+10
 
-Results are streamed to the console.
+Results are streamed to the terminal.
